fixing wrapping

--- a/style.css
+++ b/style.css
@@ -152,6 +152,7 @@ table {
     width: 100%;
     z-index: 5;
     position: relative;
+    display: block;
 }
 
 .right {
